[docs */defs.tex] Make the building process of documents available. I am not sure if we want to go further with the tex document process but this could be useful when it is actually used again.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10027 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 94b4450b45a0e2d42bfe18640be8275e9763f012

--- a/doc/architecture/defs.tex
+++ b/doc/architecture/defs.tex
@@ -10,15 +10,9 @@
 \usepackage{fullpage}
 \usepackage{url}
 
+\RequirePackage{ifpdf}
 % PDF stuff
  
-\newif\ifpdf
-\ifx\pdfoutput\undefined
-   \pdffalse
-\else
-   \pdfoutput=1
-   \pdftrue
-\fi
  
 \setcounter{tocdepth}{3}
  
