[OSCAR:OS_Settings] Added _services variables (support for new SystemServices.pm) Updated configs for hopefully all supported distros (rhel6, debian-6,7, fedora-17,18,19, ubuntu-1204,1210,1304)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10064 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e3e521a0d8ccb4e196f748ed92df9a2e31d3918e

--- a/lib/OSCAR/OCA/OS_Settings/README
+++ b/lib/OSCAR/OCA/OS_Settings/README
@@ -6,6 +6,12 @@ OS_Settings.pm reads from general through to specific.  This means that
 it will read and use the most specific setting, even if the setting exists
 in a "higher" config.  
 
+OS_Settings::getconf reads the configuration files for default, distro, distro with 
+version, compatible distro, compatible distro with version and then the
+complete ident string.  For example it will read:
+default -> centos -> centos5 -> rhel -> rhel5 -> linux-x86_64-centos-5-0
+if any are missing, they will be ignored.
+
 All configuration options should exist in the default file.
 
 The format of the file is as such:
