[oscar: deb build] Updated changelog (so package can update)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10494 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0710905b2f292aad9990a59cce9b75bee799b1fb

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+oscar (6.1.2~svn20140130-1) precise; urgency=low
+
+  * Migration to new Logger machanism
+  * Added abstraction layer for system services management.
+    supports systemd, upstart, initscripts, manual
+  * Added apitest testing mechanisms. All steps are now protected with
+    sanity tests, so a user can stop wizard and later, continue. If
+    system configuration was modified in a way that could prevent
+    oscar_wizard to perform normally, the testing mechanism will prevent
+    to continue before sanity condition are met again.
+
+ -- Olivier Lahaye <olivier.lahaye@cea.fr>  Wed, 06 Mar 2013 17:08:24 +0100
+
 oscar (6.1.2~svn20130628-1) precise; urgency=low
 
   * [oscar:packages/config.xml] Add missing version to the opkg-nfs package.
