[oscar: deb version] update deb version so package gets updated.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10535 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b588e5c6276797ba72c7c732b87dc737ec50c222

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+oscar (6.1.2~svn20140212-1) precise; urgency=low
+
+  * Updated packaging. bin and scripts split.
+    bin goes into /usr/bin
+    scripts are helpers and will move elsewhere (still in /usr/bin for compat)
+
+ -- Olivier Lahaye <olivier.lahaye@cea.fr>  Wed, 12 Feb 2014 18:16:18 +0100
+
 oscar (6.1.2~svn20140130-1) precise; urgency=low
 
   * Migration to new Logger machanism
