[oscar/oscarsamples/img_bootstrap/*] Updated mount points and moved "centos" files to distro-compat naming "rhel".
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10956 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6b25489f675082f4dc624ab05187ed349946697a

--- a/oscarsamples/img_bootstrap/README
+++ b/oscarsamples/img_bootstrap/README
@@ -1,4 +1,6 @@
-The postinstall and cleanup files are processed respectively when bootstrapping an image and after image is built.
+The postinstall and cleanup files are processed respectively before installing package in a chrooted environment and after packages are installed.
+If its the dest imagedir has not yet been fully bootstrapped, ALL commands are executed.
+If the image dir has already been "bootstrapped", only the bind and unbind commands are executed.
 
 The file format is the same for both .bootstrap or .cleanup
 
@@ -46,15 +48,11 @@ The file format is the same for both .bootstrap or .cleanup
           => unmounts $imagepath/mount_point
 
 - Processing order:
+    - bind
     - pre
     - mkpath
     - del
-    - bind
-    - unbind
     - pkgs
     - post
-
-
-
-
+    - unbind
 
