[oscar:/usr/bin/c3config] cconfig has been renamed c3config to avoid conflict with root cconfig command.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@11016 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 056ab383be87b2ea3b6ba1849d8dac71206d136e

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,7 @@
 a same build.cfg
 - bootstrapp is now able to use apitests before anything else.
 - Added support for naemon (nagios monitoring fork)
-- Added cconfig to manage c3.conf file.
+- Added c3config to manage c3.conf file.
 - Fixed many pod docs and Added OSCAR::* docs to the devel package.
 - Updated torque to 4.2.7
 - Updated ganglia-web to 3.7.0 (rpm only)
