--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ oscar (6.1.2~svn20140724-1) precise; urgency=low
     a same build.cfg
   * bootstrapp is now able to use apitests before anything else.
   * Added support for naemon (nagios monitoring fork)
-  * Added cconfig to manage c3.conf file.
+  * Added c3config to manage c3.conf file.
   * Fixed many pod docs and Added OSCAR::* docs to the devel package.
   * Updated torque to 4.2.7
   * Fixed Configurator GUI
